--- a/README
+++ b/README
@@ -4,6 +4,11 @@ ROOT REQUIRED!
 - Map (Google Maps)
 - List (text)
 
+Changelog v0.2
+- option to delete the cache
+- option to block the caches (no data will be written to the disc) (busybox required with lsattr && chattr!)
+- hopefully fixed a FC on Epic 4G (untested)
+
 Credits
 packetlss (information about the cache files)
 https://github.com/packetlss/android-locdump
